--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Girl</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    
+  <div>
+      header + content 
+  </div>  
 </body>
 </html>
