--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
 </head>
 <body>
   <div>
-      header + content 
+    <header>
+        <img src="" alt="">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Tracks</a>
+            <a href="#">Library</a>
+            <a href="#">Community</a>
+            <a href="#">Sign in</a>
+        </nav>
+    </header>
+    <main>
+        <div>
+            <h1>404</h1>
+            <p>This page was brocken or removed</p>
+            <img src="#" alt="girl">
+        </div>
+    </main>
+
   </div>  
 </body>
 </html>
