--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div>
     <header>
-        <img src="" alt="">
+        <img src="./logo1.png" alt="">
         <nav>
             <a href="#">Home</a>
             <a href="#">Tracks</a>
@@ -22,8 +22,8 @@
         <div>
             <h1>404</h1>
             <p>This page was brocken or removed</p>
-            <img src="#" alt="girl">
         </div>
+        <img src="./girl4.png" alt="girl">
     </main>
 
   </div>  
